--- a/dev-vpc.yaml
+++ b/dev-vpc.yaml
@@ -1,4 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
+Description: This template deploys a VPC with 1 private and 2 public subnets spread over 3 Availability Zones. The public subnets have a route to an internet gateway. The private subnet has a route out to the internet via a NAT Gateway.
 
 Parameters:
   VpcCidr:
